# alligator.ai

./: .env.example  .gitignore  .mcp.json  AUTHENTICATION_DESIGN.md  CLAUDE.md  ENHANCED_NEO4J_SCHEMA.md  GRAPHITI_ARCHITECTURE.md  GRAPHITI_IMPLEMENTATION.md  INGESTION_ARCHITECTURE.md  INGESTION_IMPLEMENTATION.md  MCP_DEPLOYMENT.md  MCP_IMPLEMENTATION.md  MCP_SERVER_DESIGN.md  MEMORY_ARCHITECTURE.md  MEMORY_IMPLEMENTATION.md  PRD.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  start_api.py  test_api.py  test_enhanced_features.py  test_mcp_server.py  test_precedent_analyzer.py  test_real_data_ingestion.py  test_research_api.py
.claude/: settings.local.json
.github/workflows/: test.yml
adrs/ingestion_system/: 001_architecture_integration.md  002_data_sources_quality.md  003_cost_llm_usage.md  004_data_flow_storage.md  005_operational_concerns.md  006_legal_document_chunking_strategy.md
api/: __init__.py  dependencies.py  main.py
api/auth/: __init__.py  dependencies.py  endpoints.py  models.py  service.py
api/endpoints/: __init__.py  cases.py  research.py  search.py
api/middleware/: logging.py  rate_limiting.py
examples/: auth_integration.py
mcp_server/: __init__.py  config.py  server.py
mcp_server/tools/: __init__.py  analysis.py  courtlistener.py  research.py
scripts/: prd.txt  run_tests.py  test_api.py
services/graph/: README.md  enhanced_neo4j_service.py  neo4j_service.py
services/ingestion/: __init__.py  courtlistener_client.py  ingestion_orchestrator.py  legal_chunking.py  legal_data_ingester.py  llm_processor.py  nj_jurisdiction_mapper.py
services/llm/: README.md
services/memory/: README.md
services/orchestration/: README.md
services/vector/: README.md  chroma_service.py
shared/database/: enhanced_neo4j_schema.py  neo4j_schema.py  postgres_schema.sql
shared/models/: legal_entities.py
tests/: conftest.py  requirements-test.txt
tests/agents/: test_precedent_analyzer.py
tests/integration/: README.md  test_auth_system.py  test_basic_enhanced_endpoints.py  test_chroma_service.py  test_datetime_serialization.py  test_enhanced_api_endpoints.py  test_enhanced_datetime_fix_verification.py  test_enhanced_legal_workflows.py  test_enhanced_neo4j_service.py  test_neo4j_service.py
tests/unit/: test_legal_entities.py
(+1 files in other folders)
